--- a/essentials/code.mdx
+++ b/essentials/code.mdx
@@ -4,7 +4,7 @@ description: "Display inline code and code blocks"
 icon: "code"
 ---
 
-## Basic Basic Test Test
+## Basic Basic Test Test Test
 
 ### Inline Code
 
